# CudaBox

./: .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  pyproject.toml
cmake/: dependencies.cmake  utils.cmake
csrc/gemm/: CMakeLists.txt
csrc/gemm/benchmarks/: sgemm_bench.cu  simple_gemm_bench.cu  tgemm_bench.cu  tiled_gemm_bench.cu
csrc/gemm/src/: gemm_ops.cpp  sgemm.cu  simple_gemm.cu  tgemm.cu  tiled_gemm.cu
csrc/gemm/src/sgemm/: sgemm.cu
include/: cuda_utils.cuh  cudabox_ops.hpp  logger.hpp  python_utils.hpp  torch_utils.hpp
python/cudabox/: __init__.py  gemm.py
scripts/: build.ps1  env.sh
scripts/local/: build.ps1  build.sh
tests/: test_gemm.py
tests/gemm/: test_gemm.py
